# stik_app

./: CHANGELOG.md  package-lock.json  package.json
.github/: FUNDING.yml
src-tauri/: Cargo.toml  Entitlements.plist  tauri.conf.json
src-tauri/src/: main.rs  windows.rs
src-tauri/src/commands/: darwinkit.rs  embeddings.rs  folders.rs  git_share.rs  icloud.rs  index.rs  mod.rs  note_lock.rs  notes.rs  settings.rs  storage.rs
src/components/: CommandPalette.tsx  LockPrompt.tsx  PostIt.tsx  SettingsContent.tsx  SettingsModal.tsx  SyncIndicator.tsx
src/components/command-palette/: NoteList.tsx
src/extensions/: cm-hide-markers.ts  cm-theme.ts
src/styles/: globals.css
src/themes/: index.ts
src/types/: index.ts
src/utils/: fonts.ts  normalizeMarkdownForCopy.ts
