[package]
name = "stik"
version = "0.7.1"
description = "Instant thought capture"
authors = ["Massi"]
edition = "2021"

[lib]
name = "stik_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }
prost-build = "0.13"

[dependencies]
tauri = { version = "2", features = ["macos-private-api", "tray-icon", "image-png", "protocol-asset"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-fs = "2"
tauri-plugin-shell = "2"
tauri-plugin-updater = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
toml = "0.8"
chrono = "0.4"
dirs = "5"
uuid = { version = "1", features = ["v4"] }
pulldown-cmark = "0.12"
arboard = "3"
base64 = "0.22"
image = { version = "0.25", default-features = false, features = ["png"] }
tauri-plugin-dialog = "2.6.0"
reqwest = { version = "0.12", default-features = false, features = ["json", "rustls-tls"] }
rusqlite = { version = "0.31", features = ["bundled"] }
flate2 = "1"
prost = "0.13"

[target.'cfg(target_os = "macos")'.dependencies]
objc2 = { version = "0.6.3", default-features = false, features = ["std"] }
objc2-app-kit = { version = "0.3.2", default-features = false, features = ["NSView", "NSBitmapImageRep", "NSImageRep", "NSApplication", "NSRunningApplication"] }
objc2-foundation = { version = "0.3.2", default-features = false, features = ["NSData", "NSDictionary", "NSGeometry"] }

[dev-dependencies]
glib = ">=0.20"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
